Refactor div.frame_sub_card

--- a/index.html
+++ b/index.html
@@ -30,29 +30,25 @@
             <div class="frame_sub_head">
                 <div class="container">
                     <div class="frame_sub_card card">
-                        <nav class="navbar bg-transparent">
-                            <ul class="mt-2 mt-lg-0">
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <span class="badge badge-success">
-                                            hello
-                                        </span>
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <img class="rounded-circle" src="https://external-content.duckduckgo.com/iu/?u=http%3A%2F%2Fmedia2.firstshowing.net%2Ffirstshowing%2Fimg%2Favatar-newstills-101-full-01.jpg&f=1&nofb=1" alt="">
-                                    </a>
-                                </li>
-                                <li class="nav-item">
-                                    <a class="nav-link" href="#">
-                                        <span class="badge badge-danger">
-                                            hello
-                                        </span>
-                                    </a>
-                                </li>
-                            </ul>
-                        </nav>
+                        <img src="assets/img/me.jpg" alt="" class="me-img rounded-circle">
+
+                        <ul class="mt-2 mt-lg-0 d-flex justify-content-between">
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <span class="badge badge-success">
+                                        hello
+                                    </span>
+                                </a>
+                            </li>
+                            
+                            <li class="nav-item">
+                                <a class="nav-link" href="#">
+                                    <span class="badge badge-danger">
+                                        hello
+                                    </span>
+                                </a>
+                            </li>
+                        </ul>
 
                         <p class="h4">
                             Sub Head Card
