--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                 <form action="" class="needs-validation" id="frameForm">
                     <div class="form-group">
                         <p class="alert alert-danger d-none" id="alertForm">
-                            You can't submit empty values! ;-;
+                            You can't submit empty fields! ;-;
                         </p>
                         <p class="alert alert-success d-none" id="goForm">
                             Yayyyy! You're ready to go! :-)
